removed font-size from h1

--- a/scss/components/pages/_mainHome.scss
+++ b/scss/components/pages/_mainHome.scss
@@ -37,7 +37,7 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 100%;
+            // width: 100%;
             // line-height: 3.5em;
 
             p{
@@ -45,7 +45,7 @@
             }
 
             h1{
-                font-size: 5em;
+                // font-size: 5em;
                 font-family: $Homefont;
                 font-weight: bolder;
             }
