--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -155,9 +155,9 @@ header{
                     font-size: 6rem;
                     
                     &:nth-child(1){
-                        width: 80%;
-                        text-align: left;
-                        margin-left: 3em;
+                        width: 85%;
+                        text-align: center;
+                        // margin-left: 3em;
                         z-index: 1;
 
                         span{
@@ -189,7 +189,7 @@ header{
                                     position: fixed;
                                     width: 0%;
                                     height: 120px;
-                                    filter: grayscale(100%);
+                                    // filter: grayscale(100%);
                                     background: url('../../images/members/woozi_attacca_op1.jpg') no-repeat fixed center;
                                     background-size: cover;
                                     overflow: hidden;
@@ -212,7 +212,7 @@ header{
 
                             &:nth-child(1){
                                 width: 70%;
-                                filter: grayscale(100%);
+                                // filter: grayscale(100%);
 
                                 .profile-project-preview {
                                     width: 0%;
@@ -242,6 +242,7 @@ header{
     
                     &:nth-child(3){
                         text-align: left;
+                        margin-left: 3em;
 
                         span{
                             display: inline-block;
@@ -268,7 +269,7 @@ header{
                                 z-index: -1;
                                 margin-left: -2em;
 
-                                 .discography-project-preview {
+                                 .members-project-preview {
                                     position: fixed;
                                     width: 0%;
                                     height: 120px;
@@ -286,48 +287,48 @@ header{
                         }
                     }
     
-                    &:nth-child(4){
-                        text-align: right;
-                        margin-left: 1em;
-                        width: 80%;
-                        z-index: 1;
+                    // &:nth-child(4){
+                    //     text-align: right;
+                    //     margin-left: 1em;
+                    //     width: 80%;
+                    //     z-index: 1;
 
-                        span{
-                            display: inline-block;
-                            margin-left: auto;
-                            margin-right: auto;
-                            width: 100%;
+                    //     span{
+                    //         display: inline-block;
+                    //         margin-left: auto;
+                    //         margin-right: auto;
+                    //         width: 100%;
 
-                            &:nth-child(1){
-                                width: 60%;
-                                display: flex;
-                                position: fixed;
+                    //         &:nth-child(1){
+                    //             width: 60%;
+                    //             display: flex;
+                    //             position: fixed;
 
-                                .members-project-preview {
-                                    position: fixed;
-                                    width: 0%;
-                                    height: 120px;
-                                    background: url('../../images/members/joshua_attacca_op1.jpg') no-repeat fixed center;
-                                    background-size: cover;
-                                    overflow: hidden;
-                                }
-                            }
+                    //             .members-project-preview {
+                    //                 position: fixed;
+                    //                 width: 0%;
+                    //                 height: 120px;
+                    //                 background: url('../../images/members/joshua_attacca_op1.jpg') no-repeat fixed center;
+                    //                 background-size: cover;
+                    //                 overflow: hidden;
+                    //             }
+                    //         }
 
-                            &:nth-child(2){
-                                width: 25%;
-                                z-index: 1;
+                    //         &:nth-child(2){
+                    //             width: 25%;
+                    //             z-index: 1;
                                 
-                                &::before{
-                                    content: "04";
-                                    position: absolute;
-                                    font-size: 0.15em;
-                                    margin-top: -3em;
-                                    margin-left: -1.5em;
-                                    font-family: $discographyfont;
-                                }
-                            } 
-                        }
-                    }
+                    //             &::before{
+                    //                 content: "04";
+                    //                 position: absolute;
+                    //                 font-size: 0.15em;
+                    //                 margin-top: -3em;
+                    //                 margin-left: -1.5em;
+                    //                 font-family: $discographyfont;
+                    //             }
+                    //         } 
+                    //     }
+                    // }
 
                     
                     a{
