--- a/scss/main.css
+++ b/scss/main.css
@@ -352,9 +352,8 @@ header {
 }
 
 .nav .navbar__item ul li:nth-child(1) {
-  width: 80%;
-  text-align: left;
-  margin-left: 3em;
+  width: 85%;
+  text-align: center;
   z-index: 1;
 }
 
@@ -388,8 +387,6 @@ header {
   position: fixed;
   width: 0%;
   height: 120px;
-  -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
   background: url("../../images/members/woozi_attacca_op1.jpg") no-repeat fixed center;
   background-size: cover;
   overflow: hidden;
@@ -410,8 +407,6 @@ header {
 
 .nav .navbar__item ul li:nth-child(2) span:nth-child(1) {
   width: 70%;
-  -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
 }
 
 .nav .navbar__item ul li:nth-child(2) span:nth-child(1) .profile-project-preview {
@@ -439,6 +434,7 @@ header {
 
 .nav .navbar__item ul li:nth-child(3) {
   text-align: left;
+  margin-left: 3em;
 }
 
 .nav .navbar__item ul li:nth-child(3) span {
@@ -468,7 +464,7 @@ header {
   margin-left: -2em;
 }
 
-.nav .navbar__item ul li:nth-child(3) span:nth-child(2) .discography-project-preview {
+.nav .navbar__item ul li:nth-child(3) span:nth-child(2) .members-project-preview {
   position: fixed;
   width: 0%;
   height: 120px;
@@ -480,51 +476,6 @@ header {
 .nav .navbar__item ul li:nth-child(3) span:nth-child(2):hover .project-preview {
   -webkit-animation: navItemTwoBackground 2s ease 1 forwards;
           animation: navItemTwoBackground 2s ease 1 forwards;
-}
-
-.nav .navbar__item ul li:nth-child(4) {
-  text-align: right;
-  margin-left: 1em;
-  width: 80%;
-  z-index: 1;
-}
-
-.nav .navbar__item ul li:nth-child(4) span {
-  display: inline-block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-}
-
-.nav .navbar__item ul li:nth-child(4) span:nth-child(1) {
-  width: 60%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: fixed;
-}
-
-.nav .navbar__item ul li:nth-child(4) span:nth-child(1) .members-project-preview {
-  position: fixed;
-  width: 0%;
-  height: 120px;
-  background: url("../../images/members/joshua_attacca_op1.jpg") no-repeat fixed center;
-  background-size: cover;
-  overflow: hidden;
-}
-
-.nav .navbar__item ul li:nth-child(4) span:nth-child(2) {
-  width: 25%;
-  z-index: 1;
-}
-
-.nav .navbar__item ul li:nth-child(4) span:nth-child(2)::before {
-  content: "04";
-  position: absolute;
-  font-size: 0.15em;
-  margin-top: -3em;
-  margin-left: -1.5em;
-  font-family: New York;
 }
 
 .nav .navbar__item ul li a {
@@ -647,7 +598,6 @@ header {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 100%;
 }
 
 .mainHome__paragraph__intro p {
@@ -655,7 +605,6 @@ header {
 }
 
 .mainHome__paragraph__intro h1 {
-  font-size: 5em;
   font-family: Trovas;
   font-weight: bolder;
 }
@@ -1191,7 +1140,7 @@ header {
 }
 
 .mainProfile__paragraph__filmRelated {
-  margin-top: 10em;
+  margin: 15% 0 15% 0;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 25% 75%;
@@ -1215,9 +1164,10 @@ header {
 .mainProfile__paragraph__filmRelated__filmography::before {
   content: "Filmography";
   position: absolute;
-  font-size: 5em;
+  font-size: 8em;
   opacity: .5;
-  top: -1em;
+  top: -1.5em;
+  left: -0.5em;
 }
 
 .mainProfile__paragraph__filmRelated__filmography:hover {
@@ -1341,7 +1291,7 @@ header {
 }
 
 .mainProfile__paragraph__concerts {
-  margin-top: 15em;
+  margin-top: 40%;
   background: url("../../../images/home_page/attacca/attacca_group_photo_2.jpeg") no-repeat fixed center;
   background-size: cover;
   height: 80%;
@@ -1458,10 +1408,9 @@ header {
 }
 
 .mainMembers__dets__info__label {
-  font-weight: 800;
   margin-right: 0.5em;
-  -webkit-filter: drop-shadow(1.5px 1.5px gray);
-          filter: drop-shadow(1.5px 1.5px gray);
+  font-size: 1.2em;
+  opacity: .3;
 }
 
 .mainMembers__dets__info__name {
@@ -1575,6 +1524,20 @@ header {
           backdrop-filter: invert(100%);
 }
 
+.theDiv .close:hover::before {
+  -webkit-transform: rotate(25deg) translate(-1px, 5px);
+          transform: rotate(25deg) translate(-1px, 5px);
+  -webkit-transition: .2s ease-in-out;
+  transition: .2s ease-in-out;
+}
+
+.theDiv .close:hover::after {
+  -webkit-transform: rotate(-25deg) translate(-4px, -5px);
+          transform: rotate(-25deg) translate(-4px, -5px);
+  -webkit-transition: .2s ease-in-out;
+  transition: .2s ease-in-out;
+}
+
 .theDiv .membersCarousel {
   width: 100vw;
   height: 100vh;
@@ -1594,29 +1557,41 @@ header {
   white-space: nowrap;
 }
 
-.theDiv .membersCarousel__paragraph__image {
+.theDiv .membersCarousel__paragraph li {
+  list-style: none;
   width: 20%;
-  -o-object-fit: contain;
-     object-fit: contain;
+  height: 320px;
+  display: inline-block;
 }
 
-.theDiv .membersCarousel__paragraph__image:nth-child(1) {
+.theDiv .membersCarousel__paragraph li span {
+  width: 100%;
+  height: 320px;
+}
+
+.theDiv .membersCarousel__paragraph li span .membersCarousel__paragraph__image {
+  position: absolute;
+  width: 100%;
+  height: 330px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.theDiv .membersCarousel__paragraph li:nth-child(1) {
   -webkit-filter: grayscale(70%);
           filter: grayscale(70%);
   -webkit-transform: translate(0px, 10%);
           transform: translate(0px, 10%);
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
 }
 
-.theDiv .membersCarousel__paragraph__image:nth-child(1):hover {
+.theDiv .membersCarousel__paragraph li:nth-child(1):hover {
   -webkit-filter: grayscale(0%);
           filter: grayscale(0%);
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
 
-.theDiv .membersCarousel__paragraph__image:nth-child(2) {
+.theDiv .membersCarousel__paragraph li:nth-child(2) {
   -webkit-filter: grayscale(70%);
           filter: grayscale(70%);
   -webkit-backdrop-filter: blur(20px);
@@ -1625,35 +1600,35 @@ header {
           transform: translate(10px, 100%);
 }
 
-.theDiv .membersCarousel__paragraph__image:nth-child(2):hover {
+.theDiv .membersCarousel__paragraph li:nth-child(2):hover {
   -webkit-filter: grayscale(0%);
           filter: grayscale(0%);
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
 
-.theDiv .membersCarousel__paragraph__image:nth-child(3) {
+.theDiv .membersCarousel__paragraph li:nth-child(3) {
   -webkit-filter: grayscale(70%);
           filter: grayscale(70%);
-  -webkit-transform: translate(-25px, 5%);
-          transform: translate(-25px, 5%);
+  -webkit-transform: translate(-25px, 0%);
+          transform: translate(-25px, 0%);
 }
 
-.theDiv .membersCarousel__paragraph__image:nth-child(3):hover {
+.theDiv .membersCarousel__paragraph li:nth-child(3):hover {
   -webkit-filter: grayscale(0%);
           filter: grayscale(0%);
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
 
-.theDiv .membersCarousel__paragraph__image:nth-child(4) {
+.theDiv .membersCarousel__paragraph li:nth-child(4) {
   -webkit-filter: grayscale(70%);
           filter: grayscale(70%);
   -webkit-transform: translate(-50px, 80%);
           transform: translate(-50px, 80%);
 }
 
-.theDiv .membersCarousel__paragraph__image:nth-child(4):hover {
+.theDiv .membersCarousel__paragraph li:nth-child(4):hover {
   -webkit-filter: grayscale(0%);
           filter: grayscale(0%);
   -webkit-transition: all .2s ease-in-out;
@@ -1661,14 +1636,14 @@ header {
   z-index: 1;
 }
 
-.theDiv .membersCarousel__paragraph__image:nth-child(5) {
+.theDiv .membersCarousel__paragraph li:nth-child(5) {
   -webkit-filter: grayscale(70%);
           filter: grayscale(70%);
-  -webkit-transform: translate(-25px, 20px);
-          transform: translate(-25px, 20px);
+  -webkit-transform: translate(-25px, 10%);
+          transform: translate(-25px, 10%);
 }
 
-.theDiv .membersCarousel__paragraph__image:nth-child(5):hover {
+.theDiv .membersCarousel__paragraph li:nth-child(5):hover {
   -webkit-filter: grayscale(0%);
           filter: grayscale(0%);
   -webkit-transition: all .2s ease-in-out;
