--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -107,6 +107,7 @@ header{
             font-family: $discographyfont;
             text-transform: uppercase;
             cursor: pointer;
+
         }
     }
     
@@ -166,15 +167,28 @@ header{
                             margin-right: auto;
                             width: 100%;
 
+                            &:hover{
+                                &:nth-child(1){
+                                    &:after{
+                                        opacity: 1;
+                                        transition-delay: 1s;
+                                    }
+                                }
+                            }
+
                             &:nth-child(1){
                                 width: 25%;
                                 
                                 &::after{
                                     content: "01";
                                     position: absolute;
-                                    font-size: 0.15em;
-                                    margin-top: -3em;
-                                    margin-left: 0.5em;
+                                    font-size: 0.2em;
+                                    opacity: 0.3;
+                                    margin-top: -1em;
+                                    margin-left: -0.5em;
+                                    // font-size: 0.15em;
+                                    // margin-top: -3em;
+                                    // margin-left: 0.5em;
                                     font-family: $discographyfont;
                                 }
                             }
@@ -204,11 +218,22 @@ header{
                         margin-right: 3em;
                         z-index: 1;
 
+                        
+
                         span{
                             display: inline-block;
                             margin-left: auto;
                             margin-right: auto;
                             width: 100%;
+
+                            &:hover{
+                                &:nth-child(2){
+                                    &:before{
+                                        opacity: 1;
+                                        transition: .1s ease-in;
+                                    }
+                                }
+                            }
 
                             &:nth-child(1){
                                 width: 70%;
@@ -231,9 +256,13 @@ header{
                                 &::before{
                                     content: "02";
                                     position: absolute;
-                                    font-size: 0.15em;
-                                    margin-top: -3em;
-                                    margin-left: -1.5em;
+                                    font-size: 0.2em;
+                                    opacity: 0.3;
+                                    margin-top: -2.1em;
+                                    margin-left: -1em;
+                                    // font-size: 0.15em;
+                                    // margin-top: -3em;
+                                    // margin-left: -1.5em;
                                     font-family: $discographyfont;
                                 }
                             }
@@ -250,15 +279,27 @@ header{
                             margin-right: auto;
                             width: 100%;
 
+                            &:hover{
+                                &:nth-child(1){
+                                    &:after{
+                                        opacity: 1;
+                                        transition-delay: 1.1s;
+                                    }
+                                }
+                            }
+
                             &:nth-child(1){
                                 width: 45%;
                                 
                                 &::after{
                                     content: "03";
                                     position: absolute;
-                                    font-size: 0.15em;
-                                    margin-top: -3em;
-                                    margin-left: 0.5em;
+                                    font-size: 0.2em;
+                                    opacity: 0.3;
+                                    // font-size: 0.15em;
+                                    margin-top: -1em;
+                                    // margin-top: -3em;
+                                    margin-left: -0.5em;
                                     font-family: $discographyfont;
                                 }
                             }
@@ -286,50 +327,6 @@ header{
                             }
                         }
                     }
-    
-                    // &:nth-child(4){
-                    //     text-align: right;
-                    //     margin-left: 1em;
-                    //     width: 80%;
-                    //     z-index: 1;
-
-                    //     span{
-                    //         display: inline-block;
-                    //         margin-left: auto;
-                    //         margin-right: auto;
-                    //         width: 100%;
-
-                    //         &:nth-child(1){
-                    //             width: 60%;
-                    //             display: flex;
-                    //             position: fixed;
-
-                    //             .members-project-preview {
-                    //                 position: fixed;
-                    //                 width: 0%;
-                    //                 height: 120px;
-                    //                 background: url('../../images/members/joshua_attacca_op1.jpg') no-repeat fixed center;
-                    //                 background-size: cover;
-                    //                 overflow: hidden;
-                    //             }
-                    //         }
-
-                    //         &:nth-child(2){
-                    //             width: 25%;
-                    //             z-index: 1;
-                                
-                    //             &::before{
-                    //                 content: "04";
-                    //                 position: absolute;
-                    //                 font-size: 0.15em;
-                    //                 margin-top: -3em;
-                    //                 margin-left: -1.5em;
-                    //                 font-family: $discographyfont;
-                    //             }
-                    //         } 
-                    //     }
-                    // }
-
                     
                     a{
                         position: relative;
@@ -397,6 +394,46 @@ header{
                 &:hover{
                     color: inherit;
                     transition: .2s ease-in;
+
+                    
+                }
+            }
+
+            &:nth-child(1){
+                &::after{
+                    content: "4.1";
+                    position: absolute;
+                    font-size: 0.5em;
+                    margin-top: -0.7em;
+                    margin-left: -0.5em;
+                    opacity: 0.2;
+                }
+
+                &:hover{
+                    &::after{
+                        opacity: 1;
+                        transition-delay: .5s;
+                        transition: all 1s cubic-bezier(0.1, 0.7, 1.0, 0.1);
+                    }
+                }
+            }
+
+            &:nth-child(2){
+                &::after{
+                    content: "4.2";
+                    position: absolute;
+                    font-size: 0.5em;
+                    margin-top: -0.7em;
+                    margin-left: -0.5em;
+                    opacity: 0.2;
+                }
+
+                &:hover{
+                    &::after{
+                        opacity: 1;
+                        transition-delay: .5s;
+                        transition: all 1s cubic-bezier(0.1, 0.7, 1.0, 0.1);
+                    }
                 }
             }
         }
