--- a/scss/components/_responsive.scss
+++ b/scss/components/_responsive.scss
@@ -344,7 +344,7 @@
     }
     // MEMBERS
     .mainMembers{
-        // padding-top: 3em;
+        padding-top: 3em;
         
         width: 80%;
         height: 90%;
@@ -352,8 +352,10 @@
     
         &__dets{
             margin-bottom: 5em;
-            height: 70vh;
+            width: 100%;
+            height: 80vh;
             // padding-bottom: -2em;
+            // background-color: aquamarine;
 
             &:nth-child(13){
                 margin-bottom: 0;
@@ -363,7 +365,7 @@
             &__number{
                 right: 0;
                 // margin-top: -2.5em;
-                margin-top: -2.9em;
+                margin-top: -52%;
                 // margin-top: 60%;
                 opacity: 0.5;
                 position: absolute;
@@ -371,32 +373,32 @@
             }
     
             &__imageDiv{
-                // height: 80vh;
-                left: 0;
-                width: 90%;
+                width: 100%;
                 height: 90%;
-                // height: 600px;
-                // margin: 0 2em 0 2em;
-                // position: absolute;
-                // display: inline-block;
-                // overflow: hidden;
-                // height: 600px;
-                // right: 30%;
 
                
 
-                &:hover img{
-                    transform: scale(1.1);
+                img{
+                    &:hover {
+                        filter: grayscale(0%);
+                    }
                 }
                 
                 &__image{
-                    width: 100%;
-                    height: 80%;
+                    width: 90%;
+                    height: 72%;
+                    position: absolute;
+                    top: 0;
+                    left: 50%;
+                    transform: translate(-50%, 0%);
+                    object-position: top;
+                   
+                    
 
                     &:nth-child(13){
                         height: 400px;
                      }
-                    // object-position: center;
+                    
                 } 
             }
         
@@ -406,18 +408,34 @@
                 left: 0;
                 top: 55%;
                 text-align: left;
-                background-image: linear-gradient(90deg, #000 8%, #fff 8%);  
+               
 
-                &.dark{
-                    background-color: #fff;
-                    background-image: linear-gradient(90deg, #fff 8%, #000 8%);  
-                    // background-image: linear-gradient(90deg, #fff 100%, #000 10%);  
+                // &.dark{
+                //     background-color: #fff;
+                //     background-image: linear-gradient(90deg, #fff 8%, #000 8%);  
+                //     // background-image: linear-gradient(90deg, #fff 100%, #000 10%);  
+                // }
+
+                &__label{
+                    opacity: 1;
                 }
     
     
                 &__name{
                     font-size: 3em;
+                    // background-color: #000;
+                    // // background-image: linear-gradient(90deg, #000 77.5%, #fff 10%);
+                    // background-size: 100%;
+                    // background-clip: text;
+                    // background-image: linear-gradient(90deg, #000 8%, #fff 6%);  
+                     
+                    // -webkit-background-clip: text;
+                    // -moz-background-clip: text;
+                    // -webkit-text-fill-color: transparent; 
+                    // -moz-text-fill-color: transparent;
                 }
+
+
             }
         }
     }
@@ -459,23 +477,101 @@
                 }
             }
 
-            &__debut{
-                margin-left: 25%;
-                width: 100%;
-                background-size: contain;
-                height: 20em;
-                filter: grayscale(0%);
-                text-align: left;
+            &__definition{
+                margin-top: 10em;
+                width: 90%;
+                line-height: 1.5em;
+            }
 
-                &::before{
-                    margin: -1em 0 0 1em;
-                    left: 0;
-                    font-size: 3.5em;
+            // &__debut{
+            //     margin-left: 25%;
+            //     width: 100%;
+            //     background-size: contain;
+            //     height: 20em;
+            //     filter: grayscale(0%);
+            //     text-align: left;
+
+            //     &::before{
+            //         margin: -1em 0 0 1em;
+            //         left: 0;
+            //         font-size: 5em;
+            //     }
+            // }
+
+            &__debutDiv{
+                height: 10em;
+                margin-top: 10em;
+                width: 100%;
+                // background-color: aquamarine;
+                
+                &__debut{
+    
+                    &__debutWord{
+                        font-size: 5em;
+                    }
+        
+    
+                    &__date{
+                        font-size: 2em;
+                    }
+
+                    &__image{
+                        width: 400px;
+                        padding: 2em;
+                    }
                 }
             }
 
+            &__fandom{
+                background-color: aqua;
+                left: 0;
+                height: 400px;
+                width: 100%;
+    
+                &::before{
+                    font-size: 5em;
+                }
+            }
+
+            &__colorsDiv{
+                margin-top: 10em;
+                width: 100%;
+                height: 60%;
+                margin-left: auto;
+                margin-right: auto;
+                // background-color: aqua;
+    
+                &__colors{
+                    position: absolute;
+                    left: 0%;
+                    font-size: 5em;
+                    opacity: .5;
+                    margin-left: 0;
+                }
+    
+                &__theColors{
+                    // top: 50%;
+                    // left: 50%;
+                    // transform: translate(-50%, -50%);
+                    width: 100%;
+                    margin-left: auto;
+                    margin-right: auto;
+    
+                    p{
+                        width: 40%;
+                        display: inline-block;
+                        margin: 2%;
+                        padding: 4%;
+                        border-radius: 50%;
+                        // height: 100px;
+                        text-align: center;
+                    }
+                }
+            }
+    
+
             &__members{
-                margin-top: 8em;
+                margin-top: 5em;
                 right: 0;
                 width: 100%;
                 height: 100%;
@@ -483,8 +579,8 @@
                 display: block;
     
                 &::before{
-                    font-size: 3.5em;
-                    left: 1em;
+                    font-size: 5em;
+                    left: 0;
                 }
 
                 &__image{
@@ -494,6 +590,7 @@
                 }
     
                 &__membersNameDiv{
+                    height: auto;
                     &__names{
                         text-align: center;
                         font-size: 1.3em;
@@ -501,15 +598,23 @@
                         // background-color: #000;
                         // background-image: none;  
                     }
+
+                    &__link{
+                        height: 50px;
+                        right: 0;
+                        top: 5em;
+        
+                        
+                    }
                 }
     
             }
 
-            &__list{
+            &__sub_units_list{
                 position: relative;
                 margin-top: 3em;
                 &::before{
-                    font-size: 3.5em;
+                    font-size: 5em;
                     left: 0;
                 }
             }
@@ -528,11 +633,13 @@
                         &__names{
                             font-size: 1em;
                             margin-left: -20px;
+                            width: 20%;
                         }
             
                         &::before{
                             font-size: 2em;
                             bottom: 0;
+                            // right: 0;
                         }
                     }
                     &__vu{
@@ -544,6 +651,7 @@
                         &__names{
                             font-size: 1em;
                             margin-left: -20px;
+                            width: 20%;
                         }
             
                         &::before{
@@ -561,73 +669,148 @@
                         &__names{
                             font-size: 1em;
                             margin-left: -20px;
+                            width: 20%;
                         }
                         
                         &::before{
                             font-size: 2em;
-                            right: 0.4em;
+                            right: -0.5em;
                         }
     
                     }
                 }
             }
 
-            &__television{
+            &__filmRelated{
+                // height: auto;
+                // margin-top: 10em;
+                // margin-bottom: 10em;
+                margin: 15% 0 15% 0;
                 display: block;
-                background-size: contain;
-                width: 100%;
-                height: 100%;
-                filter: grayscale(0%);
-                padding: 2em;
-                margin-top: 8em;
-                margin-left: 2em;
-                
-                &::before{
-                    top: -0.5em;
-                    left: -0.5em;
-                    font-size: 3.5em;
+                // grid-template-columns: 25% 75%;
+
+                &__onlineshows_div{
+                    font-size: 0.7em;
                 }
+    
+    
+                &__filmography{
+                    filter: grayscale(100%);
+                    transition: .5s ease-in-out;
+                    text-align: center;
+                    margin-left: auto;
+                    margin-right: auto;
+                    writing-mode: horizontal-tb;
+                    text-orientation: sideways;
+                    word-break: break-all;
+                        display: block;
+                    width: 100%;
+                        
+                    
+                    &::before{
+                        content: "Filmography";
+                        position: absolute;
+                        font-size: 5em;
+                        opacity: .5;
+                        top: -1.5em;
+                        left: 0%;
+                        
+                        
+                    }
+        
+                    &:hover{
+                        filter: grayscale(0%);
+                        transition: .5s ease-in;
+                    }
+                }
+                
+        
+                &__filmsInFilmography{
+                    height: auto;
+                    div{
+                        margin-bottom: 2em;
+                    }
+    
+                    &__television{
+                        display: block;
+                        background-size: cover;
+                        width: 100%;
+                        height: 400px;
+                        filter: grayscale(0%);
+                        padding: 0;
+                        margin-top: 4em;
+                        margin-left: 0;
+
+                        div{
+                            padding: 2em;
+                        }
+                        
+                        &::before{
+                            top: -0.5em;
+                            left: 0;
+                            font-size: 2.5em;
+                        }
+                    }
+        
+                    &__onlineshows{
+                        display: block;
+                        background-size: cover;
+                        width: 100%;
+                        // height: 400px;
+                        margin-left: 0%;
+                        // right:0;
+                        // margin-left: 2em;
+                        filter: grayscale(0%);
+                        text-align: left;
+                        // margin-bottom: 0;
+                        // margin-left: 0;
+
+                        div{
+                            padding: 2em;
+                        }
+            
+                        &::before{
+                            text-align: right;
+                            bottom: -0.5em;
+                            right: 0;
+                            font-size: 3.5em;
+                        }
+                    }
+        
+                    &__film{
+                
+                        display: block;
+                        background-size: cover;
+                        width: 100%;
+                        height:400px;
+                        // right:0;
+                        left: 0;
+                        // margin-left: 2em;
+                        filter: grayscale(0%);
+                        text-align: left;
+                        margin-bottom: 0;
+                        margin-left: 0;
+
+                        div{
+                            padding: 2em;
+                        }
+            
+                        &::before{
+                            text-align: right;
+                            bottom: -0.5em;
+                            right: 0;
+                            font-size: 3.5em;
+                        }
+                    }
+                }
+        
             }
 
-            &__onlineshows{
-                display: block;
-                background-size: contain;
-                width: 100%;
-                height: 100%;
-                right:0;
-                // margin-left: 2em;
-                filter: grayscale(0%);
-                text-align: left;
-                // margin-bottom: 0;
-                // margin-left: 0;
+            &__concerts{
+                margin-top: 40%;
     
                 &::before{
-                    text-align: right;
-                    bottom: 3.2em;
-                    right: 0;
-                    font-size: 3.5em;
-                }
-            }
-
-            &__film{
-                
-                display: block;
-                background-size: contain;
-                width: 100%;
-                height: 100%;
-                // right:0;
-                left: 0;
-                // margin-left: 2em;
-                filter: grayscale(0%);
-                text-align: left;
-                margin-bottom: 0;
-                // margin-left: 0;
-    
-                &::before{
-                    text-align: right;
-                    bottom: 3.2em;
-                    right: 0;
-                    font-size: 3.5em;
+                    font-size: 5em;
                 }
             }
         }
