--- a/scss/components/pages/_mainCredits.scss
+++ b/scss/components/pages/_mainCredits.scss
@@ -18,6 +18,7 @@
         // background-color: #f7cac9;
         // width: 50%;
         overflow: hidden;
+        white-space: nowrap;
         &__svtNames{
             text-align: left;
             
