--- a/scss/components/pages/_mainSocials.scss
+++ b/scss/components/pages/_mainSocials.scss
@@ -29,7 +29,7 @@
                 left: 50%;
                 transform: translate(-50%, -50%);
 
-                h2{
+                p{
                     font-size: 2em;
                 }
             
